[gd_scene load_steps=4 format=3 uid="uid://btoot08xfykph"]

[ext_resource type="Script" path="res://nodes/ui/TimeDisplay.gd" id="1_y4eyp"]
[ext_resource type="FontFile" uid="uid://dr7uv14p8if1m" path="res://art/Stacked_Pixel.ttf" id="2_fu7b2"]
[ext_resource type="Texture2D" uid="uid://m3x5nifxa518" path="res://art/hourglass-small.png" id="3_02emu"]

[node name="TimeDisplay" type="Label"]
script = ExtResource("1_y4eyp")

[node name="Digit1" type="Label" parent="."]
visible = false
layout_mode = 0
offset_right = 16.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fu7b2")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Digit2" type="Label" parent="."]
layout_mode = 0
offset_left = 16.0
offset_right = 32.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fu7b2")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Digit3" type="Label" parent="."]
layout_mode = 0
offset_left = 38.0
offset_right = 54.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fu7b2")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Digit4" type="Label" parent="."]
layout_mode = 0
offset_left = 54.0
offset_right = 70.0
offset_bottom = 26.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fu7b2")
theme_override_font_sizes/font_size = 32
text = "0"

[node name="Sep" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = -2.0
offset_right = 40.0
offset_bottom = 24.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_fonts/font = ExtResource("2_fu7b2")
theme_override_font_sizes/font_size = 32
text = ":"

[node name="Timer" type="Timer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(4, 11)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_02emu")

[connection signal="timeout" from="Timer" to="." method="_tick"]
